Added the rest of the pages

--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,12 +1,19 @@
-<nav class="navbar navbar-expand-xxl bg-primary-subtle container-xxl px-xxl-3">
+<nav class="navbar navbar-expand-sm bg-primary-subtle container-xxl px-xxl-3">
+
+<div class="container-fluid">
 
 <!-- Todo: this is not responsive -->
+<!-- Todo: rework this using alpinejs -->
 <a class="navbar-brand" href="/">SzM</a>
-{# <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
-</button> #}
+</button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+    <li class="nav-item"></li>
+      <a class="nav-link" href="/buchung">Buchen</a>
+    </li>
 
     <li class="nav-item">
       <a class="nav-link" href="/ueber-mich">Über mich</a>
@@ -33,6 +40,8 @@
     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success" type="submit">Search</button>
   </form> #}
+</div>
+
 </div>
 
 </nav>
