--- a/templates/pages/angebot.html
+++ b/templates/pages/angebot.html
@@ -12,26 +12,27 @@
 
 <!-- Todo: rework this with alpinejs -->
 <h1 class="h1">Trager</h1>
-<div class="accordion" id="accordionExample">
+<div class="accordion" id="trager-acc">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#trager" aria-expanded="true" aria-controls="trager">
         <h2>Trager</h2>
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+    <div id="trager" class="accordion-collapse collapse" data-bs-parent="#trager-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, saepe.</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mentastic" aria-expanded="false" aria-controls="mentastic">
         <h2>Mentastic</h2>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+    <div id="mentastic" class="accordion-collapse collapse" data-bs-parent="#trager-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, numquam!</p>
       </div>
@@ -40,62 +41,66 @@
 </div>
 
 <h1 class="h1">Massage</h1>
-<div class="accordion" id="accordionExample">
+<div class="accordion" id="massage-acc">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#klassische-massage" aria-expanded="true" aria-controls="klassische-massage">
         <h2>Klassische Massage</h2>
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+    <div id="klassische-massage" class="accordion-collapse collapse" data-bs-parent="#massage-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, sit.</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ruecken-und-nackenmassage" aria-expanded="false" aria-controls="ruecken-und-nackenmassage">
         <h2>Rücken- und Nackenmassage</h2>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+    <div id="ruecken-und-nackenmassage" class="accordion-collapse collapse" data-bs-parent="#massage-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, nesciunt.</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#schroepfen" aria-expanded="false" aria-controls="schroepfen">
         <h2>Schröpfen</h2>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+    <div id="schroepfen" class="accordion-collapse collapse" data-bs-parent="#massage-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, at.</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#liebscher-und-bracht" aria-expanded="false" aria-controls="liebscher-und-bracht">
         <h2>Schmerztherapie nach Liebscher&Bracht</h2>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+    <div id="liebscher-und-bracht" class="accordion-collapse collapse" data-bs-parent="#massage-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nulla.</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#fussreflexzonenmassage" aria-expanded="false" aria-controls="fussreflexzonenmassage">
         <h2>Fussreflexzonenmassage</h2>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+    <div id="fussreflexzonenmassage" class="accordion-collapse collapse" data-bs-parent="#massage-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, eum?</p>
       </div>
@@ -104,98 +109,105 @@
 </div>
 
 <h1 class="h1">Kosmetik</h1>
-<div class="accordion" id="accordionExample">
+<div class="accordion" id="kosmetik-acc">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#fusspflege" aria-expanded="true" aria-controls="fusspflege">
         <h2>Fusspflege</h2>
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+    <div id="fusspflege" class="accordion-collapse collapse" data-bs-parent="#kosmeik-acc">
       <div class="accordion-body">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, eaque?</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#medizinische-kosmetik" aria-expanded="false" aria-controls="medizinische-kosmetik">
         <h2>Medizinische Kosmetik</h2>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+    <div id="medizinische-kosmetik" class="accordion-collapse collapse" data-bs-parent="#kosmetik-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, debitis?</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#aknebehandlung" aria-expanded="true" aria-controls="aknebehandlung"">
         <h2>Aknebehandlung</h2>
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+    <div id="aknebehandlung" class="accordion-collapse collapse" data-bs-parent="#kosmetik-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, recusandae.</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#antiaging" aria-expanded="false" aria-controls="antiaging">
         <h2>AntiAging</h2>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+    <div id="antiaging" class="accordion-collapse collapse" data-bs-parent="#kosmetik-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, temporibus!</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mikrodermabrasion" aria-expanded="true" aria-controls="mikrodermabrasion">
         <h2>Mikrodermabrasion</h2>
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+    <div id="mikrodermabrasion" class="accordion-collapse collapse" data-bs-parent="#kosmetik-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, in.</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#microneedling" aria-expanded="false" aria-controls="microneedling">
         <h2>Microneedling</h2>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+    <div id="microneedling" class="accordion-collapse collapse" data-bs-parent="#kosmetik-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ut?</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#klassische-kosmetik" aria-expanded="true" aria-controls="klassische-kosmetik">
         <h2>Klassische Kosmetik</h2>
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+    <div id="klassische-kosmetik" class="accordion-collapse collapse" data-bs-parent="#kosmetik-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, eum!</p>
       </div>
     </div>
   </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#manicure" aria-expanded="false" aria-controls="manicure">
         <h2>Manicure</h2>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+    <div id="manicure" class="accordion-collapse collapse" data-bs-parent="#kosmetik-acc">
       <div class="accordion-body">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatum.</p>
       </div>
