--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,20 +1,14 @@
-<div class="row align-items-center bg-secondary-subtle">
+{# <div class="row align-items-center bg-secondary-subtle">
 
 <div class="col">
-  <p>Szilvia Marosi (Deutsch, Magyar, русский)
-  <br>
-  Tel. <a href="tel:0794257491">079 425 74 91</a>
-  <br>
-  Mail: <a href="mailto:szmmassage@gmail.com">szmmassage@gmail.com</a>
-  </p>
 </div>
 
 <div class="col">
-  <a href="#">Datenschutz</a>
 </div>
 
 <div class="col">
-  <a href="#">Kontakt</a>
 </div>
 
-</div>
+</div> #}
+
+<div class="display-1 text-center">Footer</div>
