--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -2,9 +2,7 @@
 
 <div class="container-fluid">
 
-<!-- Todo: this is not responsive -->
-<!-- Todo: rework this using alpinejs -->
-<a class="navbar-brand" href="/">SzM</a>
+<a class="navbar-brand" href="/">Homepage</a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
 </button>
@@ -12,27 +10,27 @@
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
     <li class="nav-item"></li>
-      <a class="nav-link" href="/buchung">Buchen</a>
+      <a class="nav-link" href="#">Blog gallery</a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="/ueber-mich">Über mich</a>
+      <a class="nav-link" href="#">My blogs</a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="/standort">Standort</a>
+      <a class="nav-link" href="/create_blog">Create blog</a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="/angebot">Angebot</a>
+      <a class="nav-link" href="#">Login</a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="/gutschein">Gutschein</a>
+      <a class="nav-link" href="#">Create account</a>
     </li>
 
     <li class="nav-item"></li>
-      <a class="nav-link" href="/kontakt">Kontakt</a>
+      <a class="nav-link" href="#">Contact</a>
     </li>
 
   </ul>
